--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <script type="text/javascript" src="js/jquery-1.12.4.min.js"></script>
 
-    <title>GridLock Traffic Simulator</title>
+    <title>GridLock Offline Traffic Simulator</title>
   </head>
 
   <body>
